welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:17: error: ';' expected but 'else' found.
    else
    ^SnakeBuggle:31: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  while (!estFaceMur){
  ^SnakeBuggle:34: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (fonctonTest()==false){
  ^